relating the component

--- a/DMSBlazor/DMSBlazor/DMSBlazor.csproj
+++ b/DMSBlazor/DMSBlazor/DMSBlazor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\HybridDMS.Components\HybridDMS.Components.csproj" />
     <ProjectReference Include="..\DMSBlazor.Client\DMSBlazor.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
   </ItemGroup>
