--- a/DMSBlazor/DMSBlazor/DMSBlazor.csproj
+++ b/DMSBlazor/DMSBlazor/DMSBlazor.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseMauiEssentials>true</UseMauiEssentials>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\HybridDMS.Components\HybridDMS.Components.csproj" />
-    <ProjectReference Include="..\DMSBlazor.Client\DMSBlazor.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\HybridDMS.Components\HybridDMS.Components.csproj" />
+		<ProjectReference Include="..\DMSBlazor.Client\DMSBlazor.Client.csproj" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+	</ItemGroup>
 
 </Project>
