--- a/HybridDMS.Components/HybridDMS.Components.csproj
+++ b/HybridDMS.Components/HybridDMS.Components.csproj
@@ -17,6 +17,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
